dovecot/dovecot-pigeonhole/tests/extensions/enotify/errors/uri.sieve
require "enotify";

# 1: Invalid url scheme
notify "snailto:stephan@example.org";

